--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -1,6 +1,7 @@
 body {
     background-color: #2b669a;
 }
+
 .main {
     background-color: white;
     margin: 30px;
@@ -30,6 +31,36 @@ body {
     margin-top: 15px;
 }
 
+.question-title {
+    margin-top: 25px;
+}
+
+.question-tag {
+    margin-right: 5px;
+}
+
+.question-related {
+    line-height: 20px;
+    font-size: 12px;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+question-advertise {
+    width: 100%;
+}
+
+.publish-tag-tab {
+    display: none;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.publish-tag-tab .label-info {
+    margin-right: 10px;
+}
+
 .community-menu {
     color: #999;
     font-size: 13px;
@@ -47,3 +78,54 @@ body {
     float: right;
     margin-bottom: 10px;
 }
+
+.comments {
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+
+.sub-comments {
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #eee;
+    padding-top: 15px;
+}
+
+.sub-comments .btn {
+    margin: 10px 0;
+}
+
+.comment-sp {
+    margin-top: 0;
+}
+
+.menu {
+    color: #999;
+    margin-top: 5px;
+}
+
+.menu .active {
+    color: #499ef3;
+}
+
+.menu .icon {
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .icon:hover {
+    color: #499ef3;
+}
+
+.menu .comment-icon {
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .comment-icon:hover {
+    color: #499ef3;
+}
+
